# OntologyTermRedirector

./: README.md  pyproject.toml
config/systemd/system/: term-redirector.service
ontology-term-redirector/: main.py
ontology_term_redirector/: __init__.py  main.py
scripts/: coverage.py
